# matterwave

./: .gitignore  CHANGELOG.md  README.md  mypy.ini  pyproject.toml  setup.py
.github/workflows/: build_docs.yml  mypy-pytest.yml  pip_test.yml  pixi_minimal.yml  pixi_test.yml
docs/: Makefile  README.md  build_docs.sh  create_nblinks.py
docs/helpers/: generate_versions.py
docs/source/: conf.py  index.rst  installation.md
docs/source/api/: constants.rst  split_step.rst
docs/source/examples/: index.rst
examples/: bragg_beam_splitter.ipynb  helpers.py  imaginary_time_groundstate.ipynb  placeholder.ipynb  test_examples.py
matterwave/: __init__.py  rb87.py  split_step.py  wf_tools.py
matterwave/examples/: mixture_groundstate.ipynb  mixture_groundstate.py
matterwave/helpers/: __init__.py  fftarray_plotting.py  test_panel_plot.py
matterwave/tests/: test_split_step.py  test_wf_tools.py
matterwave/tests/examples/: mixture_groundstate.ipynb
src/matterwave/: __init__.py
src/matterwave/_src/: constants.py  fftarray_plotting.py  split_step.py  wf_tools.py
tests/: helpers.py  test_physics.py
tests/end_to_end/: test_physics.py
tests/unit/: test_panel_plot.py  test_split_step.py  test_wf_tools.py
